# COMP3360_Data_Driven_Animation

./: .gitignore  README.md  summary_as1.md
assignment_1/: README.md  Readme.md  bvh_visualizer.py  bvh_visualizer_debug.py  examples.py  file_io.py  readme.md  task2_forward_kinematic.py  task3_inverse_kinematic.py  viewer.py
assignment_1/data/: motion_walking.bvh
assignment_1/data/motion_files/: motion_basket.bvh  motion_dance.bvh  motion_toy.bvh
assignment_2/: README.md  env_test.py  file_io.py  load_bvhs.py  matching_utils.py  ml_examples.py  ml_motion_autoencoder_conv1d.py  ml_motion_autoencoder_fc.py  motion_concatenation.py  motion_examples.py  motion_interpolation.py  readme.md  task1_motion_editing.py  task2_motion_matching.py  todo_ml_motion_denoising.py  todo_ml_motion_interpolation.py  todo_motion_concatenation.py  todo_motion_interpolation.py  utils.py  viewer.py
assignment_2/Viewer/: controller.py  viewer.py  visualize_utils.py
assignment_2/data/: motion_running.bvh  push.bvh
assignment_2/data/edin_locomotion/: locomotion_jog_000_000.bvh  locomotion_jog_000_001.bvh  locomotion_jog_000_002.bvh  locomotion_jog_001_000.bvh  locomotion_jog_001_001.bvh  locomotion_jog_001_002.bvh  locomotion_jog_001_003.bvh  locomotion_jog_sidestep_000_000.bvh  locomotion_jog_sidestep_000_001.bvh  locomotion_jog_sidestep_000_002.bvh  locomotion_jog_sidestep_000_003.bvh  locomotion_jog_sidestep_000_004.bvh  locomotion_jog_sidestep_000_005.bvh  locomotion_jog_sidestep_000_006.bvh  locomotion_jog_sidestep_001_000.bvh  locomotion_jog_sidestep_001_001.bvh  locomotion_jog_sidestep_001_002.bvh  locomotion_jog_sidestep_001_003.bvh  locomotion_jog_sidestep_001_004.bvh  locomotion_run_000_000.bvh  locomotion_run_000_001.bvh  locomotion_run_000_002.bvh  locomotion_run_000_003.bvh  locomotion_run_000_004.bvh  locomotion_run_000_005.bvh  locomotion_run_sidestep_001_000.bvh  locomotion_transitions_000_000.bvh  locomotion_transitions_000_001.bvh  (+12 more)
assignment_2/output/: placeholder
assignment_3/: README.md  rigid_body_dynamic.py  rigid_body_dynamic_gl.py
pba_tutorial1_rbd/: CMakeLists.txt  README.md  gl_utils.cpp  main.cpp
pba_tutorial2_cloth/: CMakeLists.txt  README.md  camera.h  gl_utils.h  main.cpp  test_vs.glsl  trimesh.cpp  trimesh.h
pba_tutorial3_fem/: CMakeLists.txt  README.md  cylinder.1.ele  cylinder.1.face  cylinder.1.node  main.cpp  test_fs.glsl  tetmesh.h
practice/: README.md  main_solution.py  simulation.py
(+15 files in other folders)
